include_directories(${SaX3_SOURCE_DIR}/src/ui ${LIBYUI_INCLUDE_DIR} ${AUGEAS_INCLUDE_DIR})
link_libraries(${LIBYUI_LIBRARIES} ${AUGEAS_LIBRARIES} sax3-yuif)

add_subdirectory(res)
add_subdirectory(modules.d)
add_subdirectory(man)
add_subdirectory(translation)

add_library(sax3-yuif SHARED ui/yuifactory.cxx ui/yui.cxx)
add_executable(sax3 main.cxx)
add_executable(sax3-keyboard keyboard.cxx)
add_executable(sax3-mouse mouse.cxx)
add_executable(sax3-monitor monitors.cxx)
add_executable(sax3-touchpad touchpad.cxx)
install(PROGRAMS sax3 sax3-keyboard sax3-mouse sax3-monitor sax3-touchpad DESTINATION sbin)
install(TARGETS sax3-yuif LIBRARY DESTINATION ${LIB_INSTALL_DIR})
